--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "food-delivery-frontend",
+  "name": "food-delivery-backend",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^1.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
+  "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.1"
   }
 }
+
