--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -17,6 +17,14 @@ spec:
         image: jyothiprakashg18/food-frontend
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: nginx-conf
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: nginx.conf
+      volumes:
+      - name: nginx-conf
+        configMap:
+          name: frontend-nginx-conf
 ---
 apiVersion: v1
 kind: Service
